--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,28 @@
 
 .error {
   background-color: yellow;
+  box-shadow: 1px 1px 1px 2px red;
+  margin: 3px;
+  padding: 0 5px;
 }
-
+span.error-message{
+  background: #ffdae0;
+  padding: 5px;
+}
+.input-box{
+  border-bottom: 2px solid #ccc;
+  margin-bottom: 10px;
+  height: 50px;
+  font-size: 20px;
+  display: flex;
+  align-items:center;
+}
+.collection-item{
+  border-bottom: none;
+}
 .message {
   text-indent: 50px;
+}
+button.btn{
+  margin:0 5px;
 }
