--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,48 @@
 .App {
-  padding: 5px;
+    padding: 5px;
+    margin-left: 10%;
+    width: 70%;
 }
-
+.card{
+    width: 80%;
+    box-shadow: none;
+    border-bottom: 1px solid rgba(17, 17, 17, 0.1);
+}
 .error {
-  background-color: yellow;
-  box-shadow: 1px 1px 1px 2px red;
-  margin: 3px;
-  padding: 0 5px;
+    background-color: yellow;
+    box-shadow: 1px 1px 1px 2px red;
+    margin: 3px;
+    padding: 0 5px;
 }
 span.error-message{
-  background: #ffdae0;
-  padding: 5px;
+    background: #ffdae0;
+    padding: 5px;
 }
 .input-box{
-  border-bottom: 2px solid #ccc;
-  margin-bottom: 10px;
-  height: 50px;
-  font-size: 20px;
-  display: flex;
-  align-items:center;
+    border-bottom: 2px solid #ccc;
+    margin-bottom: 10px;
+    padding-top: 10px;
+    height: 50px;
+    font-size: 20px;
+    outline: none;
 }
 .collection-item{
-  border-bottom: none;
+    border-bottom: none;
 }
 .message {
-  text-indent: 50px;
+    text-indent: 50px;
+    font-size: 16px;
+    padding-top: 5px;
 }
 button.btn{
-  margin:0 5px;
+    margin:0 5px;
+}
+button.btn.reply-button {
+    background: transparent;
+    color: rgba(17, 17, 17, 0.6);
+    float: right;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    box-shadow: none;
 }
