--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@
 span.error-message{
     background: #ffdae0;
     padding: 5px;
+    position: absolute;
 }
 .input-box{
     border-bottom: 2px solid #ccc;
@@ -35,7 +36,17 @@ span.error-message{
     padding-top: 5px;
 }
 button.btn{
-    margin:0 5px;
+    margin:0;
+    box-shadow: none;
+    background: transparent;
+    padding: 5px;
+}
+button.btn:hover{
+    background: transparent;
+    box-shadow: none;
+}
+button.btn:focus {
+    background-color: transparent !important;
 }
 button.btn.reply-button {
     background: transparent;
@@ -45,4 +56,18 @@ button.btn.reply-button {
     right: 0;
     bottom: 0;
     box-shadow: none;
+}
+button.btn.disabled{
+    background-color: transparent !important;
+}
+.fa.fa-check-circle{
+    color: green;
+    font-size: 40px;
+}
+.disabled .fa-check-circle{
+    color: #dfdfdf;
+}
+.fa.fa-times-circle{
+    color: red;
+    font-size: 40px;
 }
