--- a/src/App.css
+++ b/src/App.css
@@ -97,3 +97,16 @@ button.btn.disabled{
     color: rgba(17, 17, 17, 0.6);
     text-align: right;
 }
+.collection.with-header .collection-header{
+    padding:10px 20px 0 20px;
+    border-bottom: none;
+}
+.collection-header h4{
+    font-size: 20px;
+    margin: 1.14rem 0 0 0;
+}
+div.hr-divider{
+    width: 5%;
+    margin-left: 5%;
+    border-bottom: 1px solid red;
+}
